--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,12 @@
  *= require_tree .
  *= require_self
  */
+ *{
+ 	padding: 0px;
+ 	margin: 0px;
+ }
+ body{
+ 	display: flex;
+ 	justify-content: center;
+ 	align-items: center;
+ }
