login css added

--- a/app/assets/stylesheets/devise/password.scss
+++ b/app/assets/stylesheets/devise/password.scss
@@ -1,14 +1,6 @@
-main{
-	width:1365px;
-	height:100vh;
-	background-image:image-url('devise/b.gif');
-	display:flex;
-	justify-content:center;
-	align-items:center;
-}
-div.boxlogin{
+div.boxpassword{
     width:400px;
-    height:350px;
+    height:250px;
     background-color:#ffffff;
     padding:20px;
     box-shadow: 0 8px 16px 0 #224687;
@@ -29,34 +21,27 @@ div.boxlogin{
        font-size:1em;
        display:flex;
        flex-direction:column;
-       div{
-           padding-top:5px;
-           padding-bottom:5px;
-       }
-       
-       input{
+       input[id="user_email"]{
           width:380px;
-          height:25px;
-          padding:4px;
           border:none;
+          padding:4px;
+          margin-top:-5px;
           border-bottom:2px solid #2196F3;
        }
        input:-webkit-autofill {
          -webkit-box-shadow: 0 0 0px 1000px white inset;
        }
-       div.field2{
-          width:15px;
+       div.field3{
+          height:50px;
           width:380px;
           display:flex;
-          align-items:center;
-          justify-content:flex-start;
+          flex-direction:column;
+          justify-content:space-between;
+          margin-top:10px;
        }
-       input[type="checkbox"]{
-           width:15px;
-           height:15px;
-           margin-right:10px;
-       }
-        input[type="submit"]{
+       input[type="submit"]{
+          margin-top:20px;
+          border:none;
           border-radius:7px;
           width:380px;
           height:35px;
@@ -66,15 +51,13 @@ div.boxlogin{
        }
        input[type="submit"]:hover{
           border-radius:7px;
+          margin-top:20px;
           width:380px;
           height:35px;
           background-color:#fff;
           font-size:1.2em;
           border:2px solid  #2196F3;
           color: #2196F3;
-       }
-       label{
-          padding-bottom:6px;
        }
        footer{
        margin-top:15px;
@@ -89,6 +72,3 @@ div.boxlogin{
       }
     }
  }
-#heading{
-           color: #1565C0;
-}
