--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,10 +1,20 @@
-<h2>Forgot your password?</h2>
-
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= devise_error_messages! %>
-
-  <div class="field">
-    <%= f.label :email %><br />
+<link rel="stylesheet" type="text/css" href="devise/password.scss">
+<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Bree+Serif|Francois+One" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+<main>
+<div class="boxpassword">
+   <header id="logo">
+  Rogatio
+  </header>
+  <script type="text/javascript">
+       $('#logo').addClass('animated flipInY');
+  </script>
+<section>
+<h4 id="heading">Forgot your password?</h4>
+  <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+  <div class="field3">
+    <%= f.label :email %>
     <%= f.email_field :email, autofocus: true %>
   </div>
 
@@ -12,5 +22,9 @@
     <%= f.submit "Send me reset password instructions" %>
   </div>
 <% end %>
-
+<footer>
 <%= render "devise/shared/links" %>
+</footer>
+</section>
+</div>
+</main>
