--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,3 @@
-<link rel="stylesheet" type="text/css" href="devise/signup.scss">
 <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Bree+Serif|Francois+One" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
@@ -12,31 +11,35 @@
   </script>
 <section>
   <h3 id="heading">Sign up</h3>
-  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-   <div class="field2">
-    <%= f.label :email %>
-    <%= f.email_field :email, autofocus: true %>
-  </div>
-  <div class="field2">
-    <%= f.label :username %>
-    <%= f.text_field :username, autofocus: true %>
-  </div>
 
-  <div class="field3">
-    <%= f.label :password %>
-    <span>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %>
-    <span>
-    <%= f.password_field :password, autocomplete: "off" %>
+   <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+   <% if devise_error_messages!%>
+      <div id="errors">
+         <%= devise_error_messages!%>
+         <%= puts devise_error_messages!%>
+      </div>
+    <%end%>
+     <div class="field">
+             <%= f.label :email %>
+             <%= f.email_field :email, autofocus: true %>
+     </div>
+  <div class="field">
+              <%= f.label :username %>
+              <%= f.text_field :username, autofocus: true %>
   </div>
-
-  <div class="field2">
-    <%= f.label :password_confirmation %>
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
+  <div class="field">
+         <%= f.label :password %>
+         <span>
+              <% if @minimum_password_length %>
+                     <em>(<%= @minimum_password_length %> characters minimum)</em>
+              <% end %>
+        </span>
+              <%= f.password_field :password, autocomplete: "off" %>
   </div>
-
+  <div class="field">
+         <%= f.label :password_confirmation %>
+         <%= f.password_field :password_confirmation, autocomplete: "off" %>
+  </div>
   <div class="actions">
     <%= f.submit "Sign up" %>
   </div>
