--- a/app/assets/stylesheets/devise.scss
+++ b/app/assets/stylesheets/devise.scss
@@ -1,6 +1,7 @@
 #devisemain{
 	width:1365px;
 	height:100vh;
+  min-height:100vh;
 	background-image:image-url('devise/b.gif');
 	display:flex;
 	justify-content:center;
