minor improvement in allignment

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -58,8 +58,10 @@ header[id="mainheader"]{
         section[id="right"]{
            nav{
                ul{
-                   li{
+                   li{   min-height:45px;
                          text-decoration:none;
+                         display:flex;
+                         align-items:center;
                      }
                  }
             }
@@ -69,18 +71,23 @@ header[id="mainheader"]{
 #profile{
    color:black; 
    width:content;
-   height:46px;
+   min-height:45px;
    background-color:#fff;
    border:none;
-   padding:16px;
+   padding-left:5px;
+   padding-right:5px;
    font-size:17px;
    color:#a2a2a2;
-   cursor:pointer;  
+   cursor:pointer; 
+   height:auto; 
    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+   display:flex;
+   align-items:center;
    img{
       width:20px;
       height:20px;
       border-radius:50%;
+      margin-right:4px;
    }
 }
 #profile:hover{
