--- a/app/views/home/user.html.erb
+++ b/app/views/home/user.html.erb
@@ -12,10 +12,10 @@
 <h4> <%=user.email%></h4>
 <div id="followbutton">
 <% if current_user.can_follow user.id%>
-<%= link_to "Follow", url_for(controller: :home,action: :follow,followee_id: user.id),method: :post%>
+<%= link_to "Follow", url_for(controller: :home,action: :follow,followee_id: user.id),method: :post,remote: true,id: "follow_#{user.id}"%>
 <%end%>
 <% if current_user.can_un_follow user.id%>
-<%= link_to "Unfollow", url_for(controller: :home,action: :unfollow,followee_id: user.id),method: :post%>
+<%= link_to "Unfollow", url_for(controller: :home,action: :follow,followee_id: user.id),method: :post,remote: true,id:"follow_#{user.id}"%>
 <%end%>
 </div>
 </div>
