--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,24 +20,16 @@
  body{
     width:auto;
     background-color:#fafafa;
- }
- #cover{
-    width:auto;
-    height:600px;
-    min-height:580px;
-    min-width:1366px;
     display:flex;
-    flex-direction:column;
-    align-items:center;
-    justify-content:flex-start;   
-    position:relative;
+    justify-content:center;
  }
 header[id="mainheader"]{
+        position:fixed;
         width:1366px;
         height:50px;
         box-sizing: border-box;
         z-index: 800;
-        font-size: 14px;
+        font-size: 12px;
         color: #fff;
         background-color:#fff;
         border-top: 2px solid #b92b27;
@@ -49,20 +41,25 @@ header[id="mainheader"]{
         align-items:center;
         box-shadow: 0 3px 2px -2px rgba(200,200,200,0.2);
         section[id="left"]{
+            padding-left:200px;
+            a{
+            text-decoration:none;
             color:#b92b27;
             font-family: 'Lobster', cursive;
             letter-spacing:0.05em;
             font-size:2.3em;
-            padding-left:200px;
+            }
+            a:hover{
+               background-color:#fff;
+            }
         }
+
         section[id="right"]{
            nav{
                ul{   display:flex;
 
                    li{   min-height:45px;
                          width:content;
-                         min-width:80px;
-                         padding-right:10px;
                          display:flex;
                          align-items:center;
                          justify-content:center;
@@ -72,6 +69,8 @@ header[id="mainheader"]{
                             text-decoration:none;
                             font-size:17px;
                             color:#a2a2a2;
+                            padding-left:15px;
+                            padding-right:15px;
                          }
                          a:hover{
                             background-color:#f6f6f6;
@@ -91,8 +90,8 @@ header[id="mainheader"]{
    min-height:45px;
    background-color:#fff;
    border:none;
-   padding-left:5px;
-   padding-right:5px;
+   padding-right:15px;
+   padding-left:15px;
    font-size:17px;
    color:#a2a2a2;
    cursor:pointer; 
@@ -132,6 +131,16 @@ header[id="mainheader"]{
 }
 #dropdown a:hover{
    background-color:#dfeffa;
+}
+div[id="mainsection"]{
+   display:flex;
+   position:absolute;
+   top:50px;
+   width:1100px;
+   min-height:540px;
+   height:content;
+   align-items:center;
+   flex-direction:column;
 }
 
 
