--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,10 @@
 
-<aside>
+<aside id="feed">
+<p>Feeds</p>
+<div id="bottom border"></div>
+<%= link_to "Top Stories"%>
+<%= link_to "New Questions",controller: :home,action: :newquestions%>
+<%= link_to "Top Rated Questions"%>
 </aside>
 <div class="createQuestion" id="createQuestion">
 <div id="questionhead">
