--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -132,7 +132,7 @@ header[id="mainheader"]{
 #dropdown a:hover{
    background-color:#dfeffa;
 }
-div[id="mainsection"]{
+#mainsection{
    display:flex;
    position:absolute;
    top:50px;
