--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -27,7 +27,38 @@
 	     }
 	}
 }
-
+#feed{
+	left:70px;
+	top:27px;
+	position:absolute;
+	display:flex;
+	flex-direction:column;
+	p{
+	   font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+	   font-size:15px;
+	   color:#393333;
+	   font-weight: 400;
+	}
+	div{
+	  width:150px;
+	  height:1px;
+	  background-color:#e2e2e2;
+	  margin-top:10px;
+	}
+	a{
+	  text-decoration:none;
+	  cursor:pointer;
+	  padding-top:4px;
+	  padding-bottom:4px;
+	  color:#666;
+	  font-weight: 400;
+      font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+	}
+	a:hover{
+      background-color:#fafafa;
+      color: #2b6dad;
+	}
+}
 #createQuestion{
 	width:600px;
 	height:110px;
@@ -131,4 +162,48 @@
 	      }
 	 }
 }
+}
+#newquestions{
+	 width:500px;
+	 min-height:400px;
+	 display:flex;
+	 flex-direction:column;
+	 margin-left:20px;
+	 #question{
+	         background-color:#fff;
+	         border-radius:7px;
+	         margin-top:8px;
+	         padding:15px;
+	         border:1px solid #efefef;
+	         display:flex;
+             width:480px;
+             height:content;
+             min-height:100px;
+             margin-top:10px;
+             display:flex;
+             flex-direction:column;
+             span{
+               font-family: 'q_serif',Georgia,Times,"Times New Roman",serif;
+               font-weight: bold;
+               line-height: 1.3;
+               font-size: 18px;
+             }
+             div[id="questionuser"]{
+                margin-top:5px;
+                display:flex;
+                align-items:center;
+                img{
+                   width:20px;
+                   height:20px;
+                   border-radius:50%;
+                 }
+                 span{
+                   padding-left:5px;
+                   line-height: 1.0em;
+                   font-size: 13px;
+                   font-weight:normal;
+                 }
+            }
+	 }
+
 }
