--- a/app/views/home/user.html.erb
+++ b/app/views/home/user.html.erb
@@ -5,7 +5,7 @@
 </section>
 <script type="text/javascript">
 	$(document).ready(function(){
-	window.question_load_more_active=false;
+	window.load_more_active=false;
 	window.offset=10;
 	document.addEventListener('scroll',function(event){
 	   bh = document.body.offsetHeight;
