--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -169,7 +169,7 @@
 	 display:flex;
 	 flex-direction:column;
 	 margin-left:20px;
-	 #question{
+	 .question{
 	         background-color:#fff;
 	         border-radius:7px;
 	         margin-top:8px;
@@ -178,7 +178,7 @@
 	         display:flex;
              width:480px;
              height:content;
-             min-height:100px;
+             min-height:80px;
              margin-top:10px;
              display:flex;
              flex-direction:column;
@@ -203,6 +203,19 @@
                    font-size: 13px;
                    font-weight:normal;
                  }
+            }
+            div[id="lower"]{
+                margin-top:10px;
+                a{ font-size:13px;
+                   text-decoration:none;
+                   color:#2b6dad;
+                   padding:2px 6px 2px 6px;
+                   border-radius:2px;
+                   background-color:#f1f8fb;
+                }
+                a:hover{
+                    border:1px solid #2b6dad;
+                }
             }
 	 }
 
