--- a/app/assets/stylesheets/answers.scss
+++ b/app/assets/stylesheets/answers.scss
@@ -49,6 +49,63 @@
          outline: 0;
          padding: 3px 7px 4px 7px;
          text-align: center;
+         cursor:pointer;
 	   }
 	}
 }
+.question{
+	         background-color:#fff;
+	         border-radius:7px;
+	         margin-top:8px;
+	         padding:15px;
+	         border:1px solid #efefef;
+	         display:flex;
+             width:480px;
+             height:content;
+             min-height:80px;
+             margin-top:10px;
+             display:flex;
+             flex-direction:column;
+             span{
+               font-family: 'q_serif',Georgia,Times,"Times New Roman",serif;
+               font-weight: bold;
+               line-height: 1.3;
+               font-size: 18px;
+             }
+             div[id="questionuser"]{
+                margin-top:5px;
+                display:flex;
+                align-items:center;
+                img{
+                   width:20px;
+                   height:20px;
+                   border-radius:50%;
+                 }
+                 span{
+                   padding-left:5px;
+                   line-height: 1.0em;
+                   font-size: 13px;
+                   font-weight:normal;
+                 }
+            }
+            div[id="lower"]{
+                margin-top:10px;
+                a{ font-size:13px;
+                   text-decoration:none;
+                   color:#2b6dad;
+                   padding:2px 6px 2px 6px;
+                   border-radius:2px;
+                   background-color:#f1f8fb;
+                }
+                a:hover{
+                    border:1px solid #2b6dad;
+                }
+                span[id="upvote"]{
+                font-family: 'q_serif',Georgia,Times,"Times New Roman",serif;
+                font-weight: bold;
+                line-height: 1.3;
+                font-size: 18px;
+                padding-left:8px;
+                }
+            }
+	 }
