--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -216,6 +216,13 @@
                 a:hover{
                     border:1px solid #2b6dad;
                 }
+                span[id="upvote"]{
+                font-family: 'q_serif',Georgia,Times,"Times New Roman",serif;
+                font-weight: bold;
+                line-height: 1.3;
+                font-size: 18px;
+                padding-left:8px;
+                }
             }
 	 }
 
