--- a/app/views/answers/ans.js.erb
+++ b/app/views/answers/ans.js.erb
@@ -1,2 +1,5 @@
 var questionid="#question"+<%=@questionid%>
+var buttonid="#button_"+<%=@questionid%>
+console.log($(buttonid))
+$(buttonid).unbind('click',false);
 $(questionid).append("<%= escape_javascript (render 'newans',questionid: @questionid)%>");
