--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -224,6 +224,13 @@
                 padding-left:8px;
                 }
             }
+            #time{
+                line-height: 1.4;
+                font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+                font-size: 13px;
+                color:#999;
+                padding-top:2px;
+            }
 	 }
 
 }
