--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -145,5 +145,36 @@ header[id="mainheader"]{
    align-items:center;
    flex-direction:column;
 }
-
+#feed{
+  left:70px;
+  top:27px;
+  position:absolute;
+  display:flex;
+  flex-direction:column;
+  p{
+     font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+     font-size:15px;
+     color:#393333;
+     font-weight: 400;
+  }
+  div{
+    width:150px;
+    height:1px;
+    background-color:#e2e2e2;
+    margin-top:10px;
+  }
+  a{
+    text-decoration:none;
+    cursor:pointer;
+    padding-top:4px;
+    padding-bottom:4px;
+    color:#666;
+    font-weight: 400;
+      font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+  }
+  a:hover{
+      background-color:#fafafa;
+      color: #2b6dad;
+  }
+}
 
