--- a/app/views/answers/answers_show.html.erb
+++ b/app/views/answers/answers_show.html.erb
@@ -2,10 +2,11 @@
 <aside id="feed">
 <p>Feeds</p>
 <div id="bottom border"></div>
-<%= link_to "Top Stories"%>
+<%= link_to "Top Stories",controller: :home,action: :topstories%>
 <%= link_to "New Questions",controller: :home,action: :newquestions%>
 <%= link_to "Top Rated Questions"%>
 </aside>
+<% if @answers.length>0%>
 <%question=Question.where(id:@answers[0].question_id).first%>
 <section class="question">
 <span><%=question.question%></span>
@@ -27,5 +28,8 @@
 <%@answers.each do |answer|%>
       <%= render 'answersshowme', answer: answer,i: i%>
       <%i=i+1%>
+<%end%>
+<%else%>
+  <span style="margin-top:70px">No answer yet posted for this question</span>
 <%end%>
 </div>
