--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,7 +2,7 @@
 <aside id="feed">
 <p>Feeds</p>
 <div id="bottom border"></div>
-<%= link_to "Top Stories"%>
+<%= link_to "Top Stories",controller: :home,action: :topstories%>
 <%= link_to "New Questions",controller: :home,action: :newquestions%>
 <%= link_to "Top Rated Questions"%>
 </aside>
