--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -234,3 +234,100 @@
 	 }
 
 }
+#storycover{
+             background-color:#fff;
+             border-radius:7px;
+             margin-top:8px;
+             padding:15px;
+             border:1px solid #efefef;
+             display:flex;
+             width:480px;
+             height:content;
+             min-height:80px;
+             margin-top:10px;
+             display:flex;
+             flex-direction:column;
+             #question{
+              font-family: 'q_serif',Georgia,Times,"Times New Roman",serif;
+               font-weight: bold;
+               line-height: 1.3;
+               font-size: 18px;
+             }
+             #bar{
+                width:470px;
+                height:1px;
+                background-color:#efefef;
+                margin-top:5px;
+                margin-bottom:10px;
+             }
+             #time{
+                line-height: 1.4;
+                font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+                font-size: 13px;
+                color:#999;
+                padding-top:2px;
+                padding-left:5px;
+            }
+             #bar{
+                width:470px;
+                height:1px;
+                background-color:#efefef;
+                margin-top:5px;
+                margin-bottom:10px;
+             }
+             #header{
+                 display:flex;
+                 align-items:center;
+                 margin-bottom:7px;
+                 margin-top:14px;
+                 img{
+                     width:20px;
+                     height:20px;
+                     border-radius:50%;
+                     border:1px solid #efefef;
+                     margin-right:5px;
+                   }
+            }
+            #answer_text{
+                width:470px;
+                padding:5px;
+                display:block;
+                div{
+                display:block;
+                overflow:hidden
+                a{
+                  text-decoration:none;
+                  overflow: hidden;
+                  cursor:pointer;
+                }
+                a:hover{
+                  color:blue;
+                  background-color:#fff;
+                }
+                }
+
+        
+          }
+          #footer{
+          margin-top:10px;
+                a{ font-size:13px;
+                   text-decoration:none;
+                   color:#2b6dad;
+                   padding:2px 6px 2px 6px;
+                   border-radius:2px;
+                   background-color:#f1f8fb;
+                }
+                a:hover{
+                    border:1px solid #2b6dad;
+                }
+                span[id="upvote"]{
+                font-family: 'q_serif',Georgia,Times,"Times New Roman",serif;
+                font-weight: bold;
+                line-height: 1.3;
+                font-size: 18px;
+                padding-left:8px;
+                }
+        }
+
+  }
+ 
