--- a/app/views/upvote/upvote_answer.js.erb
+++ b/app/views/upvote/upvote_answer.js.erb
@@ -1,11 +1,9 @@
 var el="#button_"+<%=@answer_id%>
-var el2="#upvote_"+<%=@answer_id%>
 <% if @is_upvoted %>
- $(el).html("Downvote");
+ $(el).html("Downvote | "+<%=Upvote.where(upvoteable_id:@anwer_id,upvoteable_type:"answer").length.to_s%>);
  noty({text: 'Answer upvoted', type: 'alert'});
  <% else %>
- $(el).html("Upvote");
+ $(el).html("Upvote | "+<%=Upvote.where(upvoteable_id:@answer_id,upvoteable_type:"answer").length.to_s%>);
  noty({text: 'Answer downvoted', type: 'alert'});
  <% end %> 
- var count=<%=Upvote.where(upvoteable_id:@answer_id,upvoteable_type:"answer").length%>
- $(el2).html(count)
+ 
