more option added

--- a/app/views/home/topstories.js.erb
+++ b/app/views/home/topstories.js.erb
@@ -1,5 +1,5 @@
 <%@feed.each do |story|%>
-$('#topstories').append("<%= escape_javascript (render 'story',story: story)%>");
+$('#topstories').append("<%= escape_javascript (render 'stories',story: story)%>");
 <%end%>
 window.question_offset=<%=@newoffset%>;
 window.question_load_more_active = false;
