--- a/app/views/home/_stories.html.erb
+++ b/app/views/home/_stories.html.erb
@@ -21,8 +21,9 @@
     </div>
    <div id="bar">
    </div>
-<section id="answer_text">
-<%=answer.ans.html_safe%>
+<section id="answertext<%=answer.id%>">
+<%=raw answer.ans.truncate(250)%>
+<%=link_to "(more)",url_for(controller: :answers,action: :readextra,answer_id: answer.id),method: :post,remote: true%>
 </section>
 <div id="bar"></div>
 <section id="footer">
