destroy concept added

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -146,9 +146,9 @@ header[id="mainheader"]{
    flex-direction:column;
 }
 #feed{
-  left:70px;
-  top:27px;
-  position:absolute;
+  left:130px;
+  top:70px;
+  position:fixed;
   display:flex;
   flex-direction:column;
   p{
